udagram-k8s/k8s-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-frontend-deployment
  labels:
    app: udagram-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udagram-frontend
  template:
    metadata:
      labels:
        app: udagram-frontend
    spec:
      containers:
        - name: udagram-frontend
          image: mpmaia/udagram-frontend
          ports:
            - containerPort: 80
          imagePullPolicy: Always
