udagram-k8s/k8s-reverse-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-reverse-proxy-deployment
  labels:
    app: udagram-reverse-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udagram-reverse-proxy
  template:
    metadata:
      labels:
        app: udagram-reverse-proxy
    spec:
      containers:
        - name: udagram-reverse-proxy
          image: mpmaia/udagram-reverse-proxy
          ports:
            - containerPort: 80
          imagePullPolicy: Always
