udagram-k8s/k8s-users-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-deployment
  labels:
    app: udagram-users-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udagram-users-api
  template:
    metadata:
      labels:
        app: udagram-users-api
    spec:
      containers:
        - name: udagram-api-users
          image: mpmaia/udagram-api-users
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: aws-credentials
              mountPath: /root/.aws/
              readOnly: true
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "500m"
      volumes:
        - name: aws-credentials
          hostPath:
            path: /etc/aws
            type: Directory
