udagram-k8s/k8s-feed-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-feed-api
spec:
  selector:
    app: udagram-feed-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
