udagram-k8s/k8s-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-frontend
spec:
  selector:
    app: udagram-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
