udagram-k8s/k8s-reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-reverse-proxy
spec:
  selector:
    app: udagram-reverse-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
