udagram-k8s/k8s-reverse-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: udagram-reverse-proxy
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: udagram.mpmaia.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: udagram-reverse-proxy
            port:
              number: 80
